--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,13 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
+confusable-homoglyphs==3.3.1
+crispy-bootstrap5==2024.2
 Django==5.0.3
+django-bootstrap5==23.4
+django-crispy-forms==2.1
 django-extensions==3.2.3
+django-registration==3.4
 dnspython==2.6.1
 greenlet==3.0.3
 h11==0.14.0
