--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ django-bootstrap5==23.4
 django-crispy-forms==2.1
 django-extensions==3.2.3
 django-registration==3.4
+djangorestframework==3.15.1
 dnspython==2.6.1
 greenlet==3.0.3
 h11==0.14.0
