--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ colorama==0.4.6
 confusable-homoglyphs==3.3.1
 crispy-bootstrap5==2024.2
 Django==5.0.3
-django-bootstrap5==23.4
+django-cors-headers==4.3.1
 django-crispy-forms==2.1
 django-extensions==3.2.3
 django-registration==3.4
