--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,9 @@ crispy-bootstrap5==2024.2
 Django==5.0.3
 django-cors-headers==4.3.1
 django-crispy-forms==2.1
+django-debug-toolbar==4.3.0
 django-extensions==3.2.3
+django-redis==5.4.0
 django-registration==3.4
 djangorestframework==3.15.1
 dnspython==2.6.1
