--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,7 +5,8 @@ WORKDIR /usr/src/app
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-COPY . /usr/src/app
-
 RUN pip install --upgrade pip
+COPY ./requirements.txt /usr/src/app
 RUN pip install -r requirements.txt
+
+COPY . /usr/src/app
