--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -23,6 +23,7 @@ django-registration==3.4
 djangorestframework==3.15.1
 dnspython==2.6.1
 greenlet==3.0.3
+gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
@@ -30,6 +31,7 @@ idna==3.6
 kombu==5.3.6
 moexalgo==1.0.1
 numpy==1.26.4
+packaging==24.0
 pandas==2.2.1
 prompt-toolkit==3.0.43
 psycopg==3.1.18
