--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - static_volume:/home/app/django/static
     env_file:
-      - ./.env.prod
+      - ./.env
     depends_on:
       - postgres
       - redis_cache
@@ -61,7 +61,7 @@ services:
       - redis_broker
       - postgres
     env_file:
-      - ./.env.prod
+      - ./.env
 
   celery_beat:
     build: ./app
@@ -71,7 +71,7 @@ services:
       - redis_broker
       - postgres
     env_file:
-      - ./.env.prod
+      - ./.env
 
 volumes:
   postgres_data:
