--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,10 @@ instance/
 # Scrapy stuff:
 .scrapy
 
+# Node.js & Tailwind CSS
+node_modules/
+app/static/css/styles.css
+
 # Sphinx documentation
 docs/_build/
 
