--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -26,5 +26,42 @@ services:
     env_file:
       - ./.env
 
+  celery:
+    build:
+      context: ../../
+      dockerfile: docker/dev/Dockerfile
+    restart: always
+    container_name: celery
+    command: celery -A app.config worker --loglevel=info
+    volumes:
+      - ../../app:/home/app
+    env_file:
+      - ./.env
+    depends_on:
+      - db
+      - redis
+
+  celery-beat:
+    build:
+      context: ../../
+      dockerfile: docker/dev/Dockerfile
+    restart: always
+    container_name: celery-beat
+    command: celery -A app.config beat --loglevel=info
+    volumes:
+      - ../../app:/home/app
+    env_file:
+      - ./.env
+    depends_on:
+      - celery
+      - redis
+
+  redis:
+    image: redis
+    restart: always
+    container_name: redis
+    ports:
+      - 6379:6379
+
 volumes:
   postgres_data:
