--- a/docker/dev/.env-example
+++ b/docker/dev/.env-example
@@ -2,6 +2,9 @@ ALLOWED_HOSTS=["127.0.0.1", "localhost"]
 
 SECRET_KEY=
 
+CORS_ALLOWED_ORIGINS=["http://127.0.0.1:8000", "http://localhost:8000"]
+CSRF_TRUSTED_ORIGINS=["http://127.0.0.1:8000", "http://localhost:8000"]
+
 POSTGRES_DB=stocksavvy
 POSTGRES_USER=stocksavvy
 POSTGRES_PASSWORD=
